--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,10 +4,13 @@
 inventory = ~/Ansible/inventory
 
 # (path) A number of non-playbook CLIs have a ``--playbook-dir`` argument; this sets the default value for it.
-playbook_dir = ~/Ansible/playbooks
+#playbook_dir = ~/Ansible/playbooks/
 
 # Setup private key file
 private_key_file = ~/.ssh/ansible
+
+# Setup remote user
+remote_user = mark
 
 [ssh_connection]
 pipelining = True
